added name:string to User

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
 <h1> Hello World! </h1>
 <h1> Current Homepage </h1>
+<p><%= @user %> Hello!</p> <!-- Replace with User Name later when you figure out how to add it into table correctly s-->
+<%= link_to "Edit Profile" , edit_user_registration_path %>
+<% %>
+<%=  %>
+
