--- a/app/views/exercises/new.html.erb
+++ b/app/views/exercises/new.html.erb
@@ -1,1 +1,21 @@
-<h1> Exercises to add </h1>
+<h2>Add a New Exercise!</h2>
+
+ <%= form_for [@workout, @exercises], url:{ action: "create" } do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name %></br>
+
+      <%= f.label :reps %>
+      <%= f.number_field :reps %></br>
+ 	  
+ 	   <%= f.label :sets %>
+       <%= f.number_field :sets %></br>
+       
+       <%= f.label :rpe %>
+       <%= f.number_field :rpe %></br>
+      
+      <%= f.label :weight %>
+      <%= f.number_field :weight %></br>
+
+      <%= f.submit "Enter new Exercise" %>
+ <% end  %>
+    
