--- a/app/views/exercises/new.html.erb
+++ b/app/views/exercises/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Add a New Exercise!</h2>
 
- <%= form_for [@workout, @exercises], url:{ action: "create" } do |f| %>
+ <%= form_for [@workout, @exercises], url:{ action: "create" } do |f| %> <!-- because it's a [] rails reads that it is nested -->
       <%= f.label :name %>
       <%= f.text_field :name %></br>
 
