--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -16,3 +16,4 @@
 	<% end %>
 </ul>
 <%= link_to "Add a New Exercise", new_workout_exercise_path(@workout) %>
+<%= link_to "ALL DONE! Add to the WEEK!", new_weeklog_path %>
