--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -15,5 +15,5 @@
 	
 	<% end %>
 </ul>
-<%= link_to "Add a New Exercise", new_workout_exercise_path(@workout) %>
-<%= link_to "ALL DONE! Add to the WEEK!", new_weeklog_path %>
+<p><%= link_to "Add a New Exercise", new_workout_exercise_path(@workout) %></p>
+<P><%= link_to "Finish & Log Workout 2 Weekly Report", new_weeklog_path %></p>
