added new Workout generation with Active Status Switch

--- a/app/views/weeklogs/new.html.erb
+++ b/app/views/weeklogs/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Weekly Report</h1>
 
-<% @WeekReport.each do |workout| %>
+<% @WeekWorkouts.each do |workout| %>
 	<p><b><%= workout.updated_at %></b></p>
 	
 	<% workout.exercises.each do |i| %>
