switched exercise#create redirect_to index page

--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -1,3 +1,4 @@
+
 <h1>Exercise Logged! Great Job</h1>
 <p> name: <%= @exercises.name %></p>
 <p> reps : <%= @exercises.reps %></p>
@@ -9,3 +10,9 @@
 <%= link_to "Add Another Exercise",  new_workout_exercise_path(@workout) %>
 
 <%= link_to "Return to Main Menu", workouts_path %>
+
+<!--THIS FILE NOT IN USE ANYMORE -->
+<!--THIS FILE NOT IN USE ANYMORE -->
+<!--THIS FILE NOT IN USE ANYMORE -->
+<!--THIS FILE NOT IN USE ANYMORE -->
+
