--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -17,3 +17,16 @@
 </ul>
 <p><%= link_to "Add a New Exercise", new_workout_exercise_path(@workout) %></p>
 <P><%= link_to "Finish & Log Workout 2 Weekly Report", new_weeklog_path %></p>
+
+<h1>Weekly Report</h1>
+
+<% @WeekWorkouts.each do |workout| %>
+	<p><b><%= workout.updated_at %></b></p>
+	
+	<% workout.exercises.each do |i| %>
+			
+			<p><%= i.name %> | Reps:<%= i.reps %> | Sets: <%= i.sets %> | Weight: <%= i.weight %> </p>
+
+	<% end %>
+
+<%end%>
