--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,9 @@
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="jumbotron">
+      <h1>Welcome to beFIT</h1>
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -27,8 +33,12 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up",:class => "btn btn-primary"%>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
+  </div>
+</div>
