--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -71,13 +71,60 @@
 
 <h1>Week Workouts</h1>
 
-<% @WeekWorkouts.each do |workout| %>
-	<p><b><%= workout.updated_at %></b></p>
-	
-	<% workout.exercises.each do |i| %>
+<div class="container">
+    <div class="page-header">
+        <h1 id="timeline">Timeline</h1>
+    </div>
+
+    <ul class="timeline">
+
+		<% @WeekWorkouts.each do |workout| %>
 			
-			<p><%= i.name %> | Reps:<%= i.reps %> | Sets: <%= i.sets %> | Weight: <%= i.weight %> </p>
 
-	<% end %>
+			 <li>
+	          <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+	          <div class="timeline-panel">
+	            <div class="timeline-heading">
+	            	<h4 class="timeline-title"><%= workout.updated_at %></h4>
+           		</div>
 
-<%end%>
+           		 <div class="timeline-body">
+           		 	<% workout.exercises.each do |i| %>
+						
+						<p><%= i.name %> | Reps:<%= i.reps %> | Sets: <%= i.sets %> | Weight: <%= i.weight %> </p>
+
+					<% end %>
+				</div>
+			 </div>
+			</li>
+		<%end%>
+
+
+
+    </ul>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
