--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -69,11 +69,13 @@
 </div>
 <!-- -->
 
-<h1>Week Workouts</h1>
+<div id = "previousWeeks">
+	<h1>Previous Week Reports</h1>
+</div>
 
 <div class="container">
     <div class="page-header">
-        <h1 id="timeline">Timeline</h1>
+        <h1 id="timeline">Week Workout Timeline</h1>
     </div>
 
    
