--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -69,6 +69,17 @@ body {
   text-align: center; 
 }
 
+.profile_pic{
+  border-radius:100%;
+   border: 5px solid #eee;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3); 
+  
+  max-width:200px;
+
+ 
+}
+
+
 /* Timeline CSS */
 
 .timeline {
