--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -51,7 +51,7 @@ body {
 
 }
 
-.new_exercise {
+.new_exercise_page {
   text-align: center;
   font-size: 1.5em;
 }
@@ -71,13 +71,14 @@ body {
 
 .profile_pic{
   border-radius:100%;
-   border: 5px solid #eee;
+  border: 5px solid #eee;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3); 
   
   max-width:200px;
 
  
 }
+
 
 
 /* Timeline CSS */
