--- a/app/views/exercises/new.html.erb
+++ b/app/views/exercises/new.html.erb
@@ -1,9 +1,9 @@
 
-<div class="container">
+<div class="container new_exercise_pages">
   <div class="page-header">
     <h1 class="text-center">Add New Exercise!</h1>
   </div>
-  <p class="lead text-center new_exercise">Log &amp; </p>
+  <p class="lead text-center ">Log &amp; </p>
 
 
  <%= form_for [@workout, @exercises], url:{ action: "create" } do |f| %> 
