--- a/app/views/weeklogs/new.html.erb
+++ b/app/views/weeklogs/new.html.erb
@@ -5,7 +5,8 @@
 	
 	<% workout.exercises.each do |i| %>
 			
-			<p><%= i.name %> | Reps:<%= i.reps %> | Sets: <%= i.sets %> | Weight: <%= i.weight %> </p>
+			<p><%= i.name %> | Reps:<%= i.reps %> | Sets: <%= i.sets %> | Weight: <%= i.weight %> 
+				<%=link_to "download to csv", workout_path %></p>
 
 	<% end %>
 
